--- a/POO.ipynb
+++ b/POO.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +19,12 @@
     "    def __init__(self):\n",
     "        self.lista_tarefas = []\n",
     "\n",
-    "    def adicionar_tarefa (self):\n",
-    "        pass\n",
+    "    def adicionar_tarefa (self, nome_tarefa, data_vencimento, categoria = 'Nenhuma'):\n",
+    "        tarefa = [nome_tarefa, self.converter_data(data_vencimento), categoria]\n",
+    "        \n",
+    "        with open('File.csv', 'a') as arquivo:\n",
+    "            escritor = csv.writer(arquivo, delimiter=',', lineterminator='\\n')\n",
+    "            escritor.writerow(tarefa)\n",
     "\n",
     "    def remover_tarefa (self):\n",
     "        pass    \n",
@@ -35,8 +48,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a23c8859640bc1fbc613091da76fbf96a069fd467f295e7bb8213e839167d67d"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
