--- a/POO.ipynb
+++ b/POO.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv"
+    "import csv\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +20,8 @@
     "    def __init__(self):\n",
     "        self.lista_tarefas = []\n",
     "\n",
-    "    def adicionar_tarefa (self, nome_tarefa, data_vencimento, categoria = 'Nenhuma'):\n",
-    "        tarefa = [nome_tarefa, self.converter_data(data_vencimento), categoria]\n",
+    "    def adicionar_tarefa (self, nome_tarefa, data_vencimento = datetime.date.today(), categoria = 'Nenhuma', status = 'Pendente'):\n",
+    "        tarefa = [nome_tarefa, self.converter_data(data_vencimento), categoria, status]\n",
     "        \n",
     "        with open('File.csv', 'a') as arquivo:\n",
     "            escritor = csv.writer(arquivo, delimiter=',', lineterminator='\\n')\n",
@@ -43,7 +44,10 @@
     "\n",
     "    @staticmethod\n",
     "    def converter_data (data_entrada):\n",
-    "        pass"
+    "        dia, mes, ano = map(int, data_entrada.split('/'))\n",
+    "        data_entrada = datetime.datetime(ano, mes, dia)\n",
+    "\n",
+    "        return data_entrada"
    ]
   }
  ],
