Adicionando o metodo de atualizar o arquivo csv

--- a/POO.ipynb
+++ b/POO.ipynb
@@ -36,9 +36,11 @@
     "    def imprimir_tarefas (self):\n",
     "        pass\n",
     "\n",
-    "    def converter_para_csv (self):\n",
-    "        pass\n",
-    "                \n",
+    "    def atualizar_csv (self):\n",
+    "        with open('File.csv', 'w') as arquivo:\n",
+    "            escritor = csv.writer(arquivo, delimiter=',', lineterminator='\\n')\n",
+    "            escritor.writerows(self.lista_tarefas)\n",
+    "\n",
     "    def ler_csv (self):\n",
     "        pass\n",
     "\n",
