Adicionando o metodo de ler o arquivo csv

--- a/POO.ipynb
+++ b/POO.ipynb
@@ -42,7 +42,8 @@
     "            escritor.writerows(self.lista_tarefas)\n",
     "\n",
     "    def ler_csv (self):\n",
-    "        pass\n",
+    "        with open('File.csv') as arquivo:\n",
+    "            self.lista_tarefas = list(csv.reader(arquivo, delimiter=',', lineterminator='\\n'))\n",
     "\n",
     "    @staticmethod\n",
     "    def converter_data (data_entrada):\n",
