Adicionando o metodo de remover uma tarefa

--- a/POO.ipynb
+++ b/POO.ipynb
@@ -27,9 +27,14 @@
     "            escritor = csv.writer(arquivo, delimiter=',', lineterminator='\\n')\n",
     "            escritor.writerow(tarefa)\n",
     "\n",
-    "    def remover_tarefa (self):\n",
-    "        pass    \n",
-    "        \n",
+    "    def remover_tarefa (self, nome_tarefa):\n",
+    "        self.ler_csv()\n",
+    "\n",
+    "        for tarefa in self.lista_tarefas:\n",
+    "            if tarefa[0] == nome_tarefa:\n",
+    "                self.lista_tarefas.remove(tarefa)\n",
+    "        self.atualizar_csv()\n",
+    "\n",
     "    def alterar_status (self):\n",
     "        pass\n",
     "    \n",
