Adicionando o metodo alterar status e corrigindo o adicionar tarefa

--- a/POO.ipynb
+++ b/POO.ipynb
@@ -20,8 +20,8 @@
     "    def __init__(self):\n",
     "        self.lista_tarefas = []\n",
     "\n",
-    "    def adicionar_tarefa (self, nome_tarefa, data_vencimento = datetime.date.today(), categoria = 'Nenhuma', status = 'Pendente'):\n",
-    "        tarefa = [nome_tarefa, self.converter_data(data_vencimento), categoria, status]\n",
+    "    def adicionar_tarefa (self, nome_tarefa, data_vencimento = datetime.date.today(), categoria = 'Nenhuma'):\n",
+    "        tarefa = [nome_tarefa, self.converter_data(data_vencimento), categoria, 'Pendente']\n",
     "        \n",
     "        with open('File.csv', 'a') as arquivo:\n",
     "            escritor = csv.writer(arquivo, delimiter=',', lineterminator='\\n')\n",
@@ -35,8 +35,16 @@
     "                self.lista_tarefas.remove(tarefa)\n",
     "        self.atualizar_csv()\n",
     "\n",
-    "    def alterar_status (self):\n",
-    "        pass\n",
+    "    def alterar_status (self, nome_tarefa):\n",
+    "        self.ler_csv()\n",
+    "\n",
+    "        for index, tarefa in enumerate(self.lista_lista_tarefas):\n",
+    "            if tarefa[0] == nome_tarefa:\n",
+    "                if tarefa[3] ==  'Pendente':\n",
+    "                    self.lista_tarefas[index][3] = 'Concluido'\n",
+    "                else:\n",
+    "                    self.lista_tarefas[index][3] = 'Pendente'\n",
+    "        self.atualizar_csv()\n",
     "    \n",
     "    def imprimir_tarefas (self):\n",
     "        pass\n",
