--- a/POO.ipynb
+++ b/POO.ipynb
@@ -46,8 +46,13 @@
     "                    self.lista_tarefas[index][3] = 'Pendente'\n",
     "        self.atualizar_csv()\n",
     "    \n",
-    "    def imprimir_tarefas (self):\n",
-    "        pass\n",
+    "    def imprimir_tarefas (self, data_vencimento):\n",
+    "        self.ler_csv()\n",
+    "        \n",
+    "        data = self.converter_data(data_vencimento)\n",
+    "        for tarefa in self.lista_tarefas:\n",
+    "            if tarefa[1] == data:\n",
+    "                print(tarefa)\n",
     "\n",
     "    def atualizar_csv (self):\n",
     "        with open('File.csv', 'w') as arquivo:\n",
